--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "type": "module",
   "scripts": {
+    "start": "npm run \"watch all\"",
     "watch unit": "watch -p \"**/*.js\" -c \"node testing/default.test & node testing/Stack.test\"",
     "watch all": "watch -p \"**/*.js\" -c \"node testing/default.test & node testing/Stack.test & node testing/LinkedList.test\""
   },
