--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "type": "module",
   "scripts": {
     "start": "npm run \"watch all\"",
-    "watch unit": "watch -p \"**/*.js\" -c \"node testing/default.test & node testing/Stack.test\"",
-    "watch all": "watch -p \"**/*.js\" -c \"node testing/default.test & node testing/Stack.test & node testing/LinkedList.test\""
+    "watch unit": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/Queue.test\"",
+    "watch all": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/Stack.test & node testing/LinkedList.test  & node testing/Queue.test \""
   },
   "author": "",
   "license": "ISC",
