--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "npm run \"watch all\"",
     "watch unit": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/Queue.test\"",
-    "watch all": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/Stack.test & node testing/LinkedList.test  & node testing/Queue.test \""
+    "watch all": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/Stack.test & node testing/LinkedList.test  & node testing/Queue.test & node testing/findFirstRepeatingCharacter.test \""
   },
   "author": "",
   "license": "ISC",
