--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "start": "npm run \"watch all\"",
-    "watch unit": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/findFirstRepeatingCharacter.test\"",
+    "watch unit": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/async.test\"",
     "watch all": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/Stack.test & node testing/LinkedList.test  & node testing/Queue.test & node testing/findFirstRepeatingCharacter.test & node testing/HashTable.test & node testing/makeRomanNumbers.test \""
   },
   "author": "",
