--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "type": "module",
   "scripts": {
     "start": "npm run \"watch all\"",
-    "watch unit": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/Tree.test\"",
-    "watch all": "watch -p \"**/*.js\" -c \" node testing/default.test & node testing/async.test & node testing/findFirstRepeatingCharacter.test & node testing/HashTable.test & node testing/LinkedList.test & node testing/makeRomanNumbers.test & node testing/Queue.test & node testing/Stack.test & node testing/Tree.test \""
+    "watch unit": "watch -p \"**/*.js\" -c \" node testing/start.test & node testing/Tree.test\"",
+    "watch all": "watch -p \"**/*.js\" -c \" node testing/_start.test & node testing/async.test & node testing/findFirstRepeatingCharacter.test & node testing/HashTable.test & node testing/LinkedList.test & node testing/makeRomanNumbers.test & node testing/Queue.test & node testing/Stack.test & node testing/Tree.test & node testing/_end.test \""
   },
   "author": "",
   "license": "ISC",
